background image added

--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
             <h1>Boduruddin</h1>
             <button>Download Resume</button>
         </nav>
+        <div class="banner-container">
+            <img src="" alt="">
+            <h1></h1>
+            <p></p>
+            <button></button>
+        </div>
     </header>
     <main>
 
