banner section added

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
             <button>Download Resume</button>
         </nav>
         <div class="banner-container">
-            <img src="" alt="">
-            <h1></h1>
-            <p></p>
-            <button></button>
+            <img src="./assets/Group.png" alt="">
+            <h1>"In the near future, I hope to become a Developer."</h1>
+            <p>I started my learning with the Programming Hero. Already I learned HTML and CSS some basic. In the near future, I believe will be a good web developer.</p>
+            <button>Contact with me</button>
         </div>
     </header>
     <main>
