Why Web Development section added

--- a/index.html
+++ b/index.html
@@ -16,12 +16,47 @@
         <div class="banner-container">
             <img src="./assets/Group.png" alt="">
             <h1>"In the near future, I hope to become a Developer."</h1>
-            <p>I started my learning with the Programming Hero. Already I learned HTML and CSS some basic. In the near future, I believe will be a good web developer.</p>
-            <button>Contact with me</button>
+            <p class="text-description">I started my learning with the Programming Hero. Already I learned HTML and CSS some basic. In the near future, I believe will be a good web developer.</p>
+            <button><a class="nav-list-items-links" href="#home">Contact with me</a></button>
         </div>
     </header>
     <main>
-
+        <section class="why-web">
+            <div class="why-web-heading-container">
+                <h1 class="text-heading">Why Web Development??</h1>
+                <p class="text-description">I like web development because it is a highly in-demand profession in the world and it offers high earning potential also the profession provides opportunities for creativity and high levels of job flexibility.</p>
+            </div>
+            <div class="why-web-img-heading-description">
+                <div class="why-web-heading-description">
+                    <h2 class="why-web-img-text-heading">I will Do Coding and Change The World</h2>
+                    <p class="text-description">Every business no matter how big or small, every company needs a streamlined software system to streamline its operations. For travel like Google Maps, connecting People like Facebook, etc. I will do coding and create different types of web applications to help everyone in their life easily.</p>
+                    <button>Learn More</button>
+                </div>
+                <div>
+                    <img src="./assets/Layer_1.png" alt="">
+                </div>
+            </div>
+            <div class="why-web-img-heading-description">
+                <div>
+                    <img src="./assets/Layer_2.png" alt="">
+                </div>
+                <div class="why-web-heading-description">
+                    <h2 class="why-web-img-text-heading">I will help People by creating Modern Web System</h2>
+                    <p class="text-description">I will help people by creating a modern Web System it will improve the perception of their business, and it also improve usability and security integration.</p>
+                    <button>Learn More</button>
+                </div>
+            </div>
+            <div class="why-web-img-heading-description">
+                <div class="why-web-heading-description">
+                    <h2 class="why-web-img-text-heading">I will Do Coding and Change The World</h2>
+                    <p class="text-description">Every business no matter how big or small, every company needs a streamlined software system to streamline its operations. For travel like Google Maps, connecting People like Facebook, etc. I will do coding and create different types of web applications to help everyone in their life easily.</p>
+                    <button>Learn More</button>
+                </div>
+                <div>
+                    <img src="./assets/Layer_3.png" alt="">
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
