My Current Target section completed

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <img src="./assets/Group.png" alt="">
             <h1>"In the near future, I hope to become a Developer."</h1>
             <p class="text-description">I started my learning with the Programming Hero. Already I learned HTML and CSS some basic. In the near future, I believe will be a good web developer.</p>
-            <button><a class="nav-list-items-links" href="#home">Contact with me</a></button>
+            <button><a class="nav-list-items-links" href="#contact">Contact with me</a></button>
         </div>
     </header>
     <main>
@@ -65,6 +65,40 @@
             <div class="video">
                 <iframe class="video-ifame" src="https://www.youtube.com/embed/uFIu0Ah7iXY?si=XCuiUsZmKDrI9VnO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
+        </section>
+        <section class="my-current-target-container">
+            <div class="my-current-target-header-des">
+                <h2 class="text-heading">My Current Target</h2>
+                <p class="text-description">My current target is to learn HTML, CSS, and Javascript after that I will learn other programming languages.</p>
+            </div>
+            <div class="my-current-targets">
+                <div class="my-current-target one">
+                    <img src="./assets/html.png" alt="">
+                    <h2 class="text-heading my-current-target-heading">HTML</h2>
+                    <p class="text-description">HTML is the standard markup language for Web pages.</p>
+                    <button><a href="https://www.w3schools.com/html/" target="_blank">Learn More</a></button>
+                </div>
+                <div class="my-current-target two" id="my-current-target">
+                    <img src="./assets/css.png" alt="">
+                    <h2 class="text-heading my-current-target-heading">CSS</h2>
+                    <p class="text-description">CSS is the language we use to style an HTML document.</p>
+                    <button><a href="https://www.w3schools.com/css/default.asp" target="_blank">Learn More</a></button>
+                </div>
+                <div class="my-current-target three">
+                    <img src="./assets/js.png" alt="">
+                    <h2 class="text-heading my-current-target-heading">JavaScript</h2>
+                    <p class="text-description">JavaScript is the world's most popular programming language.</p>
+                    <button><a href="https://www.w3schools.com/js/default.asp" target="_blank">Learn More</a></button>
+                </div>
+            </div>
+        </section>
+        <section class="i-need-support-container" id="contact">
+            <h2></h2>
+            <p></p>
+            <textarea name="" id="" cols="30">
+
+            </textarea>
+            <button type="submit">Submit</button>
         </section>
     </main>
     <footer>
