footer section added

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/root.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Assignment-01</title>
 </head>
 <body>
@@ -93,16 +94,27 @@
             </div>
         </section>
         <section class="i-need-support-container" id="contact">
-            <h2></h2>
-            <p></p>
-            <textarea name="" id="" cols="30">
-
-            </textarea>
-            <button type="submit">Submit</button>
+            <h2>I need Support</h2>
+            <p class="text-description">If you need any support then write below details about your question.</p>
+            <div class="i-need-support-input-button">
+                <form>
+                    <input class="i-need-support-input" type="text" placeholder="Suggest me any feedback for me">
+                   <input class="i-need-support-button" type="submit" value="Submit">
+                </form>
+            </div>
         </section>
     </main>
     <footer>
-
+        <section class="footer-container">
+            <div>
+                <h2>An Open Commitment by Boduruddin</h2>
+            </div>
+            <div>
+                <a href="https://www.facebook.com/" target="_blank"><span class="social-icon"><i class="fa fa-facebook"></i></span></a>
+                <a href="https://github.com/" target="_blank"><span class="social-icon github-icon"><i class="fa fa-github"></i></span></a>
+                <a href="https://www.linkedin.com/" target="_blank"><span class="social-icon"><i class="fa fa-linkedin"></i></span></a>
+            </div>
+        </section>
     </footer>
 </body>
 </html>
